fixed foodMenu item's sizes on mobile

--- a/Grevo/src/styles/components/foodFilterPopup.scss
+++ b/Grevo/src/styles/components/foodFilterPopup.scss
@@ -19,6 +19,7 @@
                 display: flex;
                 flex-direction: column;
                 align-content: center;
+                align-items: center;
                 
                 li{
                     display: flex;
