--- a/Grevo/src/styles/pages/foodMenu.scss
+++ b/Grevo/src/styles/pages/foodMenu.scss
@@ -176,6 +176,10 @@
 
             &__content {
                 gap: 40px 40px;
+
+                li{
+                    width: 100%;
+                }
             }
         }
     }
